--- a/.gitignore
+++ b/.gitignore
@@ -173,5 +173,5 @@ dist
 
 # SvelteKit build / generate output
 .svelte-kit
-
+node_modules
 # End of https://www.toptal.com/developers/gitignore/api/macos,node
